adding update routes
