# src/routes/v1/review.js
@@ -8,5 +8,6 @@ router.get('/review/:reviewId', reviewController.getByReviewId);
 router.get('/review/album/:albumId', reviewController.getByAlbumId);
 router.get('/review/user/:userId', reviewController.getByUserId);
 router.post('/review/:albumId', auth, reviewController.post);
+router.put('/review/:reviewId', auth, reviewController.update);
 
 module.exports = router;
